# bunnyland-plugin-museumsim

./: README.md
.github/workflows/: ci.yml
server/: README.md  pyproject.toml
server/src/bunnyland_museumsim/: __init__.py  appraisal.py  authentication.py  collectibles.py  components.py  display.py  donation.py  enrichment.py  events.py  exhibits.py  incidents.py  install.py  museum.py  patrons.py  plugin.py  prefabs.py  provenance.py  restoration.py  spatial.py  visitors.py
server/tests/: test_appraisal.py  test_authentication.py  test_collectibles.py  test_display.py  test_donation.py  test_enrichment.py  test_exhibits.py  test_helpers.py  test_incidents.py  test_patrons.py  test_plugin.py  test_provenance.py  test_restoration.py  test_visitors.py
